yaml descriptions, removed unwanted endpoints, enhanced get /todos endopoint to retrieve items. changed logout to /auth/logout
