# app/controllers/items_controller.rb
@@ -2,11 +2,6 @@ class ItemsController < ApplicationController
   before_action :set_todo
   before_action :set_todo_item, only: [:show, :update, :destroy]
 
-  # GET /todos/:todo_id/items
-  def index
-    json_response(@todo.items)
-  end
-
   # GET /todos/:todo_id/items/:id
   def show
     json_response(@item)
@@ -33,7 +28,7 @@ class ItemsController < ApplicationController
   private
 
   def item_params
-    params.permit(:name, :done , :todo_id)
+    params.permit(:name, :done, :todo_id)
   end
 
   def set_todo
